# fpso-api

./: .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: codeql.yml  pylint.yml  tests.yml
alembic/: env.py
alembic/versions/: 419517182167_operations_add.py  515dc6ebc50d_operations_add_column.py  5b1f2cf998db_init.py  b7ab91bc904b_test_envs.py  ffa3c3528e47_operations.py
app/: config.py  deps.py  main.py
app/crud/: crud_equipment.py  crud_operation.py  crud_vessel.py
app/db/: __init__.py  session.py
app/models/: equipment.py  operation.py  vessel.py
app/routers/: equipment.py  operation.py  vessel.py
app/schemas/: equipment.py  operation.py  vessel.py
app/tests/: conftest.py  main_test.py  test_vessel.py
app/tests/crud/: test_crud_equipment.py  test_crud_operation.py  test_crud_vessel.py
app/tests/routers/: test_equipment.py  test_operation.py  test_vessel.py
