[tool.poetry]
name = "fpso-api"
version = "0.1.0"
description = "Floating Production, Storage and Offloading API"
authors = ["Lucas Cavalcante <5858507+lcavalcante@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
SQLAlchemy = "^1.4.39"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
requests = "^2.28.1"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pylint = "^2.14.5"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
